# rythm-box

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  rust.yml
openspec/changes/archive/2026-06-28-rythm-box-gui-app/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-28-rythm-box-gui-app/specs/audio-playback/: spec.md
openspec/changes/archive/2026-06-28-rythm-box-gui-app/specs/gui-shell/: spec.md
openspec/changes/archive/2026-06-28-rythm-box-gui-app/specs/pattern-editor/: spec.md
openspec/changes/archive/2026-06-28-rythm-box-gui-app/specs/project-management/: spec.md
rhythm-core/: Cargo.toml
rhythm-core/src/: audio.rs  error.rs  lib.rs  project.rs  validation.rs
rhythm-core/src/models/: instrument.rs  mod.rs  pattern.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Untitled.rythm  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: InstrumentRow.tsx  MenuBar.tsx  PatternGrid.tsx  PatternTabs.tsx  Toolbar.tsx
src/hooks/: useProject.ts
src/types/: index.ts
